Nef_2 Package: Release changes
----------------------------------------------------------------------
17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

3 April 2004 Sylvain Pion
- Remove debug options from testsuite makefile to please PGCC.

25 March 2004 Radu Ursu
- made the doc work with the new implementation of Manual tools

23 March 2004 Radu Ursu
- Put splitters between the widgets of the demo so that the drawing area 
  could become bigger

10 February 2004 Radu Ursu
- Updated headers in examples

1.55 (18 Jan 2004)
- Rename USING in CGAL_USING.

1.54 (18 Jan 2004)
- Remove CGAL_CFG_MATCHING_BUG_2.

1.53 (18 Jan 2004)
- Replace obsolete macros CGAL_TYPENAME_MSVC_NULL, CGAL_TEMPLATE_NULL
  and CGAL_NULL_TMPL_ARGS.

1.52 (11 Jan 2004)
- Change _R to R_ to please Darwin.

1.51 (27 Nov 2003) [rursu]
- removed Polynomial-test from cgal_test in test directory.

1.50 (26 Nov 2003) [rursu]
- Removed Polynomial files from Nef_2 and moved in Polynomial package

1.49 (17 Nov 2003)
- Replaced obsolete CGAL_NULL_TMPL_ARGS with <>

1.48 (19. October 2003)
- Fix MipsPro warnings.

1.47 (15. September 2003) [af]
- New license headers

1.46 (15. September 2003) [af]
- Added intro.tex to the reference manual

1.45 (10. September 2003) [rursu]
- Qt_help_window is in the CGAL namespace now.

1.44 (7. September 2003) [rursu]
- demo use now the new class Qt_help_window instead of HelpWindow
- demo use the new demo icon demoicon

1.43 (3. September 2003) [af]
- Unenabled specialisation of sign and of gcd for VC7

1.42 (27. August 2003)
- Remove non-const operator[] of Polynomial.

1.41 (6. August 2003) [af]
- Changed to_double(Polynomial)

1.40 (5. August 2003) [af]
- Yet another tryout for g++3.3 to get rid of error message
- Added missing inline in a forward declaration
- Changed maintainer

1.38 (31. Jul 2003) [af]
- Added friend declarations (for g++-3.2, g++-3.3)

1.34-1.27
- cgal_submit problems
